--- a/Readme.org
+++ b/Readme.org
@@ -19,19 +19,19 @@
 
 
 
+* Programming Language Config 
+** Python
+ - Has syntax Hylighting 
+ - But auto complete not working 
 
-* Python
-** Has syntax Hylighting 
-** But auto complete not working 
+** Java
 
-* Java
-
-** Autocomplete and text hylight working
-** Eclipse JDT Language Server
-*** Provides the autocomplete support 
-*** Must run "lsp-install-server RET jdtls RET" to install 
-** Links
-*** [[https://github.com/emacs-lsp/lsp-java][lsp-java]] (the git ripo of package needed)
+   - Autocomplete and text hylight working
+   - Eclipse JDT Language Server
+   * Provides the autocomplete support 
+   * Must run "lsp-install-server RET jdtls RET" to install 
+   -Links
+   + [[https://github.com/emacs-lsp/lsp-java][lsp-java]] (the git ripo of package needed)
 
 
 
