--- a/Readme.org
+++ b/Readme.org
@@ -31,7 +31,7 @@
    * Provides the autocomplete support 
    * Must run "lsp-install-server RET jdtls RET" to install 
    * Links
-   + [[https://github.com/emacs-lsp/lsp-java][lsp-java]] (the git ripo of package needed)
+   ** [[https://github.com/emacs-lsp/lsp-java][lsp-java]] (the git ripo of package needed)
 
 
 
